--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ h3{
 .phrase{
   width: 80%;
   height: 35vh;
-  background-image: url(https://assets.stickpng.com/images/5f493c2668ecc70004ae7122.png);
+  background-image: url(/papel.png);
   background-size:cover;
   background-repeat: no-repeat;
   background-position: center;
